css/main.css
#header-title {
	font-size: 70px;
}

#logo {
	width:200px;
}

h1, h2, h3, h4 {
	font-family: Barlow;
}

p {
	font-family: Roboto;
}

hr.divider {
	border-color:white;
}

.font-light {
	font-weight: 200;
}

#mc_embed_signup input.button {
	color: #181D46 !important;
}

.navy-bg{
	background-color:#181D46;
	padding: 20px;
}

header.masthead {
  padding-top: 10rem;
  padding-bottom: calc(10rem - 72px);
  background-image: url("/img/graphic_bg-01-min.png");
  background-color: #FC7361 !important;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

#job-page {
	background-color: rgba(128, 140, 251, 0.6);
}

#subheader-title {
	font-size: 26px;
}

.page-section {
	padding: 4rem 0;
}

.pink {
	color:#FC7361
}

#pre-body-title {
	font-size: 20px;
}

#body-title {
	font-size: 40px;
	padding-top: 10px;
	padding-bottom: 30px;
	font-weight: 700;
}

#body-title-2 {
	font-size: 26px;
	padding-top: 50px;
	padding-bottom: 10px;
}

#featured-hack {
	border-radius: 50%;
	width:500px;
}

.img-recruit {
	width: 100%;
	margin: 100px;
	border: 20px solid #222A68;
}

/*.perks{
	margin-top: 150px;
	margin-left: 50px;
}*/

.btn-light {
	background-color:#fda094 !important;
}

#mc_embed_signup input.button {
	width:100% !important;
	background-color:#fda094;
	color:black;
	border-radius: 20px;
	height: 40px;
}

#mc_embed_signup input.button:hover {
	background-color: #E26554;
}

#mc_embed_signup input.email {
	width:100% !important;
	height: 40px;
}

#mc_embed_signup input.button {
	font-weight: 800;
	font-size: 16px;
}

/*.social_media_background {
	background-color: #FC7361;
}*/

.social_icon {
	height: 50px;
	width: 50px;
	margin: 20px;
}

.social_title {
	font-size: 45px;
	padding: 15px;
}

.send_email {
	font-size: 25px;
	padding: 15px;
}

.email_button {
	color: #fc7361
}

.email_button:hover {
	color: #f1f1f1
}

.sponsor-icon {
	width: 100%;
	margin: 20px;
}

.apply_date {
	font-size: 18px;
	font-weight: bold;
}

.collapsible {
	background-color: #f1f1f1;
	color: black;
	cursor: pointer;
	padding: 10px;
	width: 100%;
	border: none;
	text-align: left;
	outline: none;
	font-size: 18px;
 }
 .collapsible:hover {
	background-color: #f1f1f1;
 }
 .collapsible:after {
	content: '\002B';
	color: black;
	font-weight: bold;
	float: right;
	margin-left: 5px;
 }
 .collapsible:clicked {
	content: "\2212";
 }

.sponsor {
	font-size: 20px;
	color: #f1f1f1;
	font-family: Roboto;
	border-bottom: 3px solid #181D46;
	padding-bottom:5px;
}

@media only screen and (max-width: 1000px) {
	.video,.img-recruit {
		display: none;
	}

	.page-section {
		padding: 3rem 0px;
	}
}

@media only screen and (max-width: 600px) {
    
	.video, .img-recruit {
		display: none;	
	}

	.page-section {
		padding: 2rem 0px;
	}

	h1#header-title{
		font-size: 70px;
		padding-left: 10px;
		padding-right: 10px;
	}

	.ytp-cued-thumbnail-overlay-image {
		padding-top: 30px;
		margin-top: 30px;
	}

	section#organize{
		margin: 0px 20px 0px 20px;
	}

	section#sponsor{
		margin: 0px 20px 0px 20px;
	}

}

